# woodpecker

./: CHANGES.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: FIXES.json  FIXES.md  FIX_PLANS.json  FIX_PLANS.md  OVERVIEW.md  cli.md  concepts.md  design.md  docs-development.md  examples.md  fixes.html  index.md  plans.md  plugins.md  recipe-reference.json  recipe-reference.md  recipes.md  user-friendliness.md
docs/notebooks/: atlas_fix_plan_example.ipynb  atlas_recipe_example.ipynb  auto_fix_plan_store_example.ipynb  auto_recipe_store_example.ipynb  cmip6_core_api_example.ipynb  cmip6_core_fix_plan_example.ipynb  cmip6_core_recipe_example.ipynb  duckdb_fix_plan_store_example.ipynb  duckdb_recipe_store_example.ipynb  esa_cci_fix_plan_example.ipynb  esa_cci_recipe_example.ipynb  fix_plan_catalog_example.ipynb  pythonic_fix_plan_builder_example.ipynb  pythonic_recipe_builder_example.ipynb  recipe_catalog_example.ipynb  xmip_plugin_demo.ipynb
examples/: README.md  cmip7_api_example.ipynb
examples/fix-plans/: README.md  atlas.json  cmip6.json  esa_cci.json  store.json
fix-plans/examples/: cmip6.json  esa_cci.json
notebooks/: atlas_fix_plan_example.ipynb  cmip6_core_api_example.ipynb  cmip6_core_fix_plan_example.ipynb  cmip7_api_example.ipynb  esa_cci_fix_plan_example.ipynb  esa_cci_water_vapour_plan.json
notebooks/plans/: cmip6_core_plan.json
plugins/woodpecker-atlas-plugin/: README.md  pyproject.toml
plugins/woodpecker-atlas-plugin/examples/: usage.py
plugins/woodpecker-atlas-plugin/src/woodpecker_atlas_plugin/: __init__.py  atlas_0001.py  atlas_0002.py  constants.py
plugins/woodpecker-atlas-plugin/src/woodpecker_atlas_plugin/plans/: atlas_basic_plan.json
plugins/woodpecker-atlas-plugin/src/woodpecker_atlas_plugin/recipes/: atlas_basic_recipe.json
plugins/woodpecker-atlas-plugin/tests/: test_atlas_plugin.py
plugins/woodpecker-atlas-plugin/tests/plans/: atlas_basic_plan.json
plugins/woodpecker-atlas-plugin/tests/recipes/: atlas_basic_recipe.json
plugins/woodpecker-cmip6-decadal-plugin/: README.md  pyproject.toml
plugins/woodpecker-cmip6-decadal-plugin/examples/: usage.py
plugins/woodpecker-cmip6-decadal-plugin/src/woodpecker_cmip6_decadal_plugin/: __init__.py  cmip6d_0001.py  cmip6d_0002.py  cmip6d_0003.py  cmip6d_0004.py  cmip6d_0005.py  cmip6d_0006.py  cmip6d_0007.py  cmip6d_0008.py  cmip6d_0009.py  cmip6d_0010.py  cmip6d_0011.py  cmip6d_0012.py  cmip6d_0013.py  cmip6d_0014.py  cmip6d_0015.py  cmip6d_0999.py  cmip6dg_0001.py  constants.py  helpers.py
plugins/woodpecker-cmip6-decadal-plugin/src/woodpecker_cmip6_decadal_plugin/plans/: cmip6_decadal_full_plan.json
plugins/woodpecker-cmip6-decadal-plugin/src/woodpecker_cmip6_decadal_plugin/recipes/: cmip6_decadal_full_recipe.json
plugins/woodpecker-cmip6-decadal-plugin/tests/: _cmip6_decadal_helpers.py  test_cmip6_decadal_plugin.py
plugins/woodpecker-cmip6-decadal-plugin/tests/plans/: cmip6_decadal_full_plan.json
plugins/woodpecker-cmip6-decadal-plugin/tests/recipes/: cmip6_decadal_full_recipe.json
plugins/woodpecker-cmip6-plugin/: README.md  pyproject.toml
plugins/woodpecker-cmip6-plugin/examples/: usage.py
plugins/woodpecker-cmip6-plugin/src/woodpecker_cmip6_plugin/: __init__.py  cmip6_0001.py  constants.py
plugins/woodpecker-cmip6-plugin/tests/: _cmip6_helpers.py  test_cmip6_plugin.py
plugins/woodpecker-cmip7-plugin/: README.md  pyproject.toml
plugins/woodpecker-cmip7-plugin/examples/: usage.py
plugins/woodpecker-cmip7-plugin/src/woodpecker_cmip7_plugin/: __init__.py  cmip7_0001.py  cmip7_0002.py  cmip7_0003.py  constants.py  helpers.py
plugins/woodpecker-cmip7-plugin/src/woodpecker_cmip7_plugin/plans/: esa_cci_water_vapour_plan.json
plugins/woodpecker-cmip7-plugin/src/woodpecker_cmip7_plugin/recipes/: esa_cci_water_vapour_recipe.json
plugins/woodpecker-cmip7-plugin/tests/: _cmip7_helpers.py  test_cmip7_plugin.py
plugins/woodpecker-cmip7-plugin/tests/plans/: esa_cci_water_vapour_plan.json
plugins/woodpecker-cmip7-plugin/tests/recipes/: esa_cci_water_vapour_recipe.json
plugins/woodpecker-xmip-plugin/: README.md  pyproject.toml
plugins/woodpecker-xmip-plugin/examples/: usage.py
plugins/woodpecker-xmip-plugin/src/woodpecker_xmip_plugin/: __init__.py  helpers.py  xmip_0001.py
plugins/woodpecker-xmip-plugin/src/woodpecker_xmip_plugin/plans/: cmip6_preprocessing.yaml
plugins/woodpecker-xmip-plugin/src/woodpecker_xmip_plugin/recipes/: cmip6_preprocessing.yaml
plugins/woodpecker-xmip-plugin/tests/: _xmip_helpers.py  test_xmip_plugin.py
scripts/: generate_fix_catalog.py  generate_fix_plan_catalog.py  generate_fix_webpage.py  generate_recipe_catalog.py
scripts/templates/: fixes.html.jinja
tests/: README.md  conftest.py  test_api_inputs.py  test_base.py  test_cli.py  test_cli_check_fix.py  test_cli_core.py  test_cli_plans.py  test_dataset_types.py  test_fix_plan.py  test_fix_plan_store.py  test_fixes_apply.py  test_fixes_cmip7.py  test_fixes_cmip7_esa_cci.py  test_fixes_common.py  test_fixes_esmval.py  test_identifiers.py  test_identity.py  test_io_backends.py  test_provenance.py  test_public_imports.py  test_registry.py  test_runner.py  test_selection.py  test_store.py  test_testing_factory.py  test_ui_formatting.py  test_workflow.py
tests/integration/: README.md  __init__.py  helpers.py  test_api_fixes_atlas.py  test_api_fixes_cmip6.py  test_api_fixes_cmip6_decadal.py  test_api_fixes_cmip7.py  test_api_fixes_cordex.py  test_api_plans.py  test_api_plans_atlas.py  test_api_plans_cmip6.py  test_api_plans_cmip6_decadal.py  test_api_plans_cmip7.py  test_api_plans_xmip.py  test_api_recipes_cmip6.py  test_api_recipes_xmip.py  test_api_usage_examples.py  test_api_write_outputs.py  test_plan_documents.py  test_recipe_documents.py
woodpecker/: __init__.py  api.py  cli.py  commands.py  data_input.py  execution.py  fix_plan.py  fix_plan_store.py  formatting.py  identifiers.py  plan.py  provenance.py  recipe.py  results.py  runner.py  selection.py  sources.py  workflow.py
(+230 files in other folders)
