[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodpecker-cmip6-decadal-plugin"
version = "0.2.0"
description = "External plugin providing CMIP6 decadal fixes for Woodpecker"
requires-python = ">=3.10"
dependencies = [
  "woodpecker>=0.2.0",
  "xarray>=2024.1.0",
]

[project.entry-points."woodpecker.plugins"]
cmip6_decadal = "woodpecker_cmip6_decadal_plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["woodpecker_cmip6_decadal_plugin*"]
