[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodpecker-cmip6-plugin"
version = "0.1.0"
description = "External plugin providing CMIP6 fixes for Woodpecker"
requires-python = ">=3.10"
dependencies = [
  "woodpecker>=0.1.0",
  "xarray>=2024.1.0",
]

[project.entry-points."woodpecker.plugins"]
cmip6 = "woodpecker_cmip6_plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["woodpecker_cmip6_plugin*"]
