[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodpecker-cmip7-plugin"
version = "0.2.0"
description = "Reference external plugin providing CMIP7-style fixes for Woodpecker"
requires-python = ">=3.10"
dependencies = [
  "woodpecker>=0.2.0",
  "xarray>=2024.1.0",
]

[project.entry-points."woodpecker.plugins"]
cmip7 = "woodpecker_cmip7_plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["woodpecker_cmip7_plugin*"]
